reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_attributes.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_schema::<TestStructWithAttributes>()"
---
{
  "name": "",
  "functions": [
    {
      "name": "",
      "input_type": {
        "name": "reflect_demo::tests::basic::TestStructWithAttributes"
      },
      "output_type": {
        "name": "reflect_demo::tests::basic::TestStructWithAttributes"
      },
      "serialization": [
        "json"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithAttributes",
        "fields": [
          {
            "name": "0",
            "type": {
              "name": "u8"
            }
          }
        ],
        "transparent": true
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithAttributes",
        "fields": [
          {
            "name": "0",
            "type": {
              "name": "u8"
            }
          }
        ],
        "transparent": true
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
