reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_attributes_output_only.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_schema::<TestStructWithAttributesOutputOnly>()"
---
{
  "name": "",
  "functions": [
    {
      "name": "",
      "input_type": {
        "name": "reflect_demo::tests::basic::TestStructWithAttributesOutputOnly"
      },
      "output_type": {
        "name": "reflect_demo::tests::basic::TestStructWithAttributesOutputOnly"
      },
      "serialization": [
        "json"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithAttributesOutputOnly",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::string::String"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithAttributesOutputOnly",
        "fields": [
          {
            "name": "0",
            "type": {
              "name": "std::string::String"
            }
          }
        ],
        "transparent": true
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  }
}
